available weather (baru 1 njir ga tahan pengen nonton brighton main)

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <body class="bg-biru-10 before:blur-sm font-Helvetica">
     <div class="flex text-center w-max m-5">
       <img src="/public/asset/weather-1.png" class="w-20 h-10" />
-      <p class="font-semibold text-biru-1 my-auto">Weather Today</p>
+      <p class="font-semibold text-biru-2 my-auto">Weather Today</p>
     </div>
 
     <!-- search -->
@@ -56,7 +56,69 @@
       </div>
     </div>
 
-    <div class="w-full h-screen bg-green-600"></div>
+    <p class="mx-auto text-center text-3xl text-blue-700 shadow-sm p-3 rounded-md font-semibold w-max">Available Weather</p>
+
+    <div class="w-full h-screen grid grid-cols-12 my-8">
+      <div class="bg-biru-3 h-3/5 col-start-2 col-end-6 rounded-xl shadow-xl relative">
+        <div class="flex">
+          <h1 class="font-semibold text-white mt-10 ml-12 text-xl" id="manokwariCity">Search The City First!</h1>
+          <h1 class="font-semibold text-white ml-1 mt-10 text-xl" id="manokwariCountry"></h1>
+          <img src="" alt="" class="w-6 h-6 mt-10 ml-3" id="manokwariImg" />
+        </div>
+        <p class="font-semibold text-white text-xl ml-12 mt-2" id="manokwariLocaltime"></p>
+        <p class="text-white text-lg ml-12 mt-2" id="manokwariWeatherName"></p>
+        <p class="text-white text-3xl w-max absolute right-12 top-10" id="manokwariTemp"></p>
+
+        <div class="min-w-fit h-32 mt-2 mx-12 grid grid-cols-2">
+          <div class="my-auto mr-5 flex justify-between">
+            <p class="text-white">Temp</p>
+            <p class="text-white" id="manokwaritempSmall"></p>
+          </div>
+          <div class="my-auto ml-5 flex justify-between">
+            <p class="text-white">Feelslike</p>
+            <p class="text-white" id="manokwariFeelslike"></p>
+          </div>
+          <div class="my-auto mr-5 flex justify-between">
+            <p class="text-white">Wind speed</p>
+            <p class="text-white" id="manokwariWindSpeed"></p>
+          </div>
+          <div class="my-auto ml-5 flex justify-between">
+            <p class="text-white">Wind degree</p>
+            <p class="text-white" id="manokwariWindDegree"></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-biru-3 h-3/5 col-start-8 col-end-12 rounded-xl shadow-xl">
+        <div class="flex">
+          <h1 class="font-semibold text-white mt-10 ml-12 text-3xl" id="city">Search The City First!</h1>
+          <h1 class="font-semibold text-white ml-1 mt-10 text-3xl" id="country"></h1>
+          <img src="" alt="" class="w-6 h-6 mt-10 ml-3" id="img" />
+        </div>
+        <p class="font-semibold text-white text-xl ml-12 mt-2" id="localtime"></p>
+        <p class="text-white text-lg ml-12 mt-2" id="weatherName"></p>
+        <p class="text-white text-6xl w-max absolute right-12 top-10" id="temp"></p>
+
+        <div class="min-w-fit h-32 mt-2 mx-12 grid grid-cols-2">
+          <div class="my-auto mr-5 flex justify-between">
+            <p class="text-white">Temp</p>
+            <p class="text-white" id="tempSmall"></p>
+          </div>
+          <div class="my-auto ml-5 flex justify-between">
+            <p class="text-white">Feelslike</p>
+            <p class="text-white" id="feelslike"></p>
+          </div>
+          <div class="my-auto mr-5 flex justify-between">
+            <p class="text-white">Wind speed</p>
+            <p class="text-white" id="windSpeed"></p>
+          </div>
+          <div class="my-auto ml-5 flex justify-between">
+            <p class="text-white">Wind degree</p>
+            <p class="text-white" id="windDegree"></p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 
